GKE/chat.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  selector:
    matchLabels:
      app: chat
      tier: backend
      phase: test
  replicas: 2
  template:
    metadata:
      labels:
        app: chat
        tier: backend
        phase: test
    spec:
      containers:
      - name: chat
        image: gambarini/grpc-demo
        imagePullPolicy: Always
        args:
        - chatsvc/main.go
        ports:
        - containerPort: 80
