GKE/chatLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat
    tier: backend
    phase: test
spec:
  type: LoadBalancer
  #loadBalancerIP: 35.206.83.34 #you can fix an external IP
  ports:
  - name: h2
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: chat
    tier: backend
    phase: test
