GKE/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmq
spec:
  ports:
  - port: 4369
    name: rabbitmq-epmd
    protocol: TCP
    protocol: TCP
  - port: 5672
    name: rabbitmq-main
    protocol: TCP
  - port: 15672
    name: rabbitmq-management
    protocol: TCP
  - port: 25672
    name: rabbitmq-node
  clusterIP: None
  selector:
    app: rmq

---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: rmq
spec:
  serviceName: rmq
  replicas: 2
  volumeClaimTemplates:
  - metadata:
      name: rmq
      annotations:
        volume.beta.kubernetes.io/storage-class: "standard"
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
  template:
    metadata:
      labels:
        app: rmq
    spec:
      # prevents rmq pods running on the same nodes
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - rmq
              topologyKey: kubernetes.io/hostname
      containers:
      - name: rmq
        image: gambarini/rabbitmq-autocluster

        lifecycle:
          preStop:
            exec:
              command: ["rabbitmqctl", "stop"]

        livenessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
          exec:
            command: ["rabbitmqctl", "node_health_check"]

        readinessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 1
          failureThreshold: 10
          exec:
            command: ["rabbitmqctl", "node_health_check"]

        ports:
        - containerPort: 4369
        - containerPort: 5672
        - containerPort: 15672
        - containerPort: 25672

        volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: rmq

        resources:
          requests:
            memory: 100Mi
            cpu: 100m
